--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Data analyst</p>
             <div class="socials">
                 <a href="https://www.instagram.com/khuslengx"><img src="instagram-icon.png" alt="Instagram"></a>
-                <a href="#"><img src="cv-icon.png" alt="cv"></a>
+                <a href="cv.html"><img src="cv-icon.png" alt="cv"></a>
             </div>
         </div>
     </header>
