--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Khuslen Gantulga</h1>
             <p>Data analyst</p>
             <div class="socials">
-                <a href="https://www.instagram.com/khuslengx"><img src="instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.xing.com/profile/Khuslen_Gantulga"><img src="xing-icon.png" alt="Instagram"></a>
                 <a href="cv.html"><img src="cv-icon.png" alt="cv"></a>
             </div>
         </div>
