--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Khuslen Gantulga</h1>
             <p>Data analyst</p>
             <div class="socials">
-                <a href="https://www.xing.com/profile/Khuslen_Gantulga"><img src="xing-icon.png" alt="Instagram"></a>
+                <a href="https://www.xing.com/profile/Khuslen_Gantulga"><img src="xing-icon.png" alt="Xing"></a>
                 <a href="cv.html"><img src="cv-icon.png" alt="cv"></a>
             </div>
         </div>
@@ -35,7 +35,7 @@
                     This tool leverages advanced analytics to offer actionable insights, empowering users to make informed financial decisions with confidence.Whether you're managing cash flow, projecting future earnings, or allocating resources, this innovative platform adapts to your specific needs, making it an essential part of any financial strategy.
                 </p>
                 <p>
-                    It’s more than just a tool; it’s your intelligent partner for driving business growth through data-informed financial management.
+                    It’s more than just a tool.
                 </p>
              
                 <!-- <p class="credit">Design by  </p> -->
