--- a/index.html
+++ b/index.html
@@ -6,47 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Khuslen Gantulga</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="avatar">
-            <img src="avatar.jpg" alt="khuslen avatar">
+            <img src="avatar.jpg" alt="Khuslen Gantulga Avatar">
         </div>
         <div class="info">
             <h1>Khuslen Gantulga</h1>
-            <p>Data analyst</p>
+            <p>Data Analyst</p>
             <div class="socials">
-                <a href="https://www.xing.com/profile/Khuslen_Gantulga"><img src="xing-icon.png" alt="Xing"></a>
-                <a href="cv.html"><img src="cv-icon.png" alt="cv"></a>
+                <a href="https://www.xing.com/profile/Khuslen_Gantulga" target="_blank"><img src="xing-icon.png" alt="Xing Profile"></a>
+                <a href="cv.html" target="_blank"><img src="cv-icon.png" alt="CV"></a>
             </div>
         </div>
     </header>
 
+    
     <main>
+        <div class="oldprojects">
+            <h1>Old Projects</h1>
+        </div>
         <section class="projects">
-            <h2>Old Projects</h2>
             <div class="project">
                 <h3>Partimize</h3>
-                <p>Which integrates Power Apps with Power BI</p>
-                <p>
-                    Introducing my latest creation, a data-driven financial planning tool built to help businesses optimize their budgeting and forecasting processes for greater accuracy and efficiency. 
-                </p>
-                <p>
-                    This tool leverages advanced analytics to offer actionable insights, empowering users to make informed financial decisions with confidence.Whether you're managing cash flow, projecting future earnings, or allocating resources, this innovative platform adapts to your specific needs, making it an essential part of any financial strategy.
-                </p>
-                <p>
-                    It’s more than just a tool.
-                </p>
-             
-                <!-- <p class="credit">Design by  </p> -->
+                <p>Power Apps Integration with Power BI</p>
+                <p>Introducing my latest creation, a data-driven financial planning tool built to help businesses optimize their budgeting and forecasting processes for greater accuracy and efficiency.</p>
+                <p>This tool leverages advanced analytics to offer actionable insights, empowering users to make informed financial decisions with confidence. Whether you're managing cash flow, projecting future earnings, or allocating resources, this platform adapts to your needs.</p>
+                <p>It’s more than just a tool—it's a financial strategy essential.</p>
             </div>
         </section>
+
         <section class="app-preview">
-            <img src="project2.png" alt="AI English App Preview">
-            <img src="project1.png" alt="AI English App Preview">
+            <img src="project2.png" alt="Partimize Project Screenshot">
+            <img src="project1.png" alt="Partimize Project Screenshot">
+        </section>
+
+        <section class="projects">
+            <div class="project">
+                <h3>Final Thesis</h3>
+                <p>Driver fatigue is a significant cause of road accidents. This project presents a real-time driver drowsiness alert system using Raspberry Pi, sensors, and computer vision (OpenCV with Python).</p>
+                <p>The system monitors the driver’s face and eyes through a camera, detecting eye closure. If the driver’s eyes remain closed for more than 3 seconds while the vehicle is moving, a buzzer alerts the driver.</p>
+                <p>OpenCV is used to detect facial features and track eye movements, providing a cost-effective solution for reducing drowsiness-related accidents.</p>
+            </div>
+        </section>
+
+        <section class="app-preview">
+            <img src="diploma1.png" alt="Thesis Screenshot" class="diploma">
+            <img src="diploma2.JPG" alt="Thesis Screenshot" class="diploma">
         </section>
     </main>
+
+    <footer class="footer">
+        <p>© 2024 Khuslen Gantulga. All rights reserved.</p>
+    </footer>
 </body>
 </html>
-
-
