--- a/cv.html
+++ b/cv.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>View PDF</title>
 </head>
 <body>
     <embed src="cv.pdf" type="application/pdf" width="100%" height="800px">
+        <footer class="footer">
+            <p>© 2024 Khuslen Gantulga. All rights reserved.</p>
+        </footer>
 </body>
 </html>
