--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
             <img src="project1.png" alt="Partimize Project Screenshot">
         </section>
         -->
-   
+        <section class="projects">
+            <div class="project">
+                <h3>Data Optimizer</h3>
+                <p>Python Application for Data Cleaning and KPI Calculation</p>
+                <p>We developed an intuitive user interface using Tkinter, which integrates powerful tools for data cleaning and KPI calculation, streamlining workflows for business intelligence tasks.</p>
+                <p>This application utilizes NumPy, Pandas, and Openpyxl for efficient data processing and optimization, providing a seamless experience for users handling large datasets. It automates routine tasks like data validation, missing value treatment, and performance tracking.</p>
+                <p>More than just an interface, it's an all-in-one data management solution.</p>
+            </div>
+        </section>
+
+        
         <section class="projects">
             <div class="project">
                 <h3>Final Thesis</h3>
