--- a/cv-de.html
+++ b/cv-de.html
@@ -7,7 +7,7 @@
     <title>View PDF</title>
 </head>
 <body>
-    <embed src="cv.pdf" type="application/pdf" width="100%" height="800px">
+    <embed src="cv-de.pdf" type="application/pdf" width="100%" height="800px">
         <footer class="footer">
             <p>© 2024 Khuslen Gantulga. All rights reserved.</p>
         </footer>
